# argparcel

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  publish_pypi.yaml
examples/: example_0.py  example_1.py  moo.py
src/argparcel/: __init__.py  docstrings.py  magic.py
tests/: test_argparcel.py  test_docstrings.py  test_magic.py
